# metodos_numericos

TP1/: eliminacion.py  experimentos.py
TP2/: .gitignore  CMakeLists.txt  README.md  build.sh  init.sh  process_images.py  test_matrix_int.txt
TP2/py_stuff/: PCA.py  PCA2D.py  compression_error.py  corrcoef_figure.py  create_figure.py  create_image_comparison.py  data_paths.in.py  deflate_test.py  eigenvector_figure.py  error.py  execution_time.py  experiment_3_c.py  experiment_3c.py  experiments.py  experiments3_c.py  figure_generation.py  image_paths.in.py  parser.py  plot_eigenvalues.py  process_images.py  run_all_experiments.py  similarity_figure.py  support.py  tests.py  utilities.py
TP2/src/: main.cpp
TP2/src/power_iteration/: power_iteration.cpp  power_iteration.h
TP2/tests/: config_tests.h.in  test_eigen.cpp  test_read_matrix.cpp
TP2/tests/test_data/: matrix_of_floats.txt
TP3/: .gitignore  CMakeLists.txt  build.sh  init.sh
TP3/py/: convergence.py  data_paths.in.py  iterations.py  iterative_methods.py  measure_error.py  measure_error_spectral_radius.py  measure_execution_time.py  tests.py  utils.py
TP3/py_stuff/: measure_error.py  measure_execution_time.py  utils.py
TP3/src/: main.cpp  metodos_iterativos.cpp
TP3/src/metodos_iterativos/: metodos_iterativos.cpp  metodos_iterativos.h
TP3/tests/: test_gs.cpp  test_jacobi.cpp
